# zinspect

./: Cargo.toml  LICENSE  README.md
src/: app.rs  cli.rs  lib.rs  main.rs  utils.rs
src/app/: files.rs  info.rs  status.rs
