[package]
name = "zinspect"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
human-repr = "1.1.0"
owo-colors = "4.3.0"
ratatui = "0.30.2"
ratatui-textarea = "0.9.2"
thousands = "0.2.0"
zip = "8.6.0"
